Fix spacing between links.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -59,7 +59,7 @@ align-items: center;
 ul{
   display:flex;
   list-style-type: none;
-  gap:5px;
+  gap:10px;
 }
 
 .buttons{
